--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,6 +169,7 @@ add_subdirectory(include/flex)
 add_subdirectory(lib)
 add_subdirectory(swig)
 add_subdirectory(python)
+add_subdirectory(python/FlexlibMono)
 add_subdirectory(grc)
 add_subdirectory(apps)
 add_subdirectory(docs)
