--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -31,7 +31,7 @@ endif()
 GR_PYTHON_INSTALL(
     FILES
     __init__.py
-    source.py 
+    FlexSource.py 
     flex.py DESTINATION ${GR_PYTHON_DIR}/flex
 )
 
